<resources>
    <string name="app_name">Endurance</string>
    <string name="emmc_life_time_b">eMMC LIFE_TIME_B:</string>
    <string name="emmc_life_time_a">eMMC LIFE_TIME_A:</string>
    <string name="total_write_size_mb">Total Write Size(MB):</string>
    <string name="free_size">Free Size:</string>
    <string name="capacity">Capacity:</string>
    <string name="cid">eMMC CID:</string>
    <string name="manfid">eMMC MANFID:</string>
    <string name="name">Name:</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>
