<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meizu.endurance.Endurance">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/button_start"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/liftTimeA"
        android:layout_alignStart="@+id/liftTimeA"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emmc_id"
        android:id="@+id/textID"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:id="@+id/button_stop"
        android:layout_alignTop="@+id/button_start"
        android:layout_toRightOf="@+id/text_total_size"
        android:layout_toEndOf="@+id/text_total_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/capacity"
        android:id="@+id/textCap"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textID"
        android:layout_alignLeft="@+id/textID"
        android:layout_alignStart="@+id/textID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/free_size"
        android:id="@+id/textFree"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textCap"
        android:layout_alignLeft="@+id/textCap"
        android:layout_alignStart="@+id/textCap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_write_size_mb"
        android:id="@+id/text_total_size"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textFree"
        android:layout_alignStart="@+id/textFree" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emmc_life_time_a"
        android:id="@+id/liftTimeA"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/text_total_size"
        android:layout_alignLeft="@+id/text_total_size"
        android:layout_alignStart="@+id/text_total_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emmc_life_time_b"
        android:id="@+id/lifeTimeB"
        android:layout_below="@+id/liftTimeA"
        android:layout_alignLeft="@+id/liftTimeA"
        android:layout_alignStart="@+id/liftTimeA"
        android:layout_marginTop="24dp" />

</RelativeLayout>
